# Python-for-Data-Science

docs/Python 0/: ex00_explications.md  ex01_explications.md  ex02_explications.md  ex03_explications.md  ex04_explications.md  ex05_explications.md  ex06_explications.md  ex07_explications.md  ex08_explications.md  ex09_explications.md
docs/Python 1/: ex00_explications.md  ex01_explications.md  ex02_explications.md  ex03_explications.md  ex04_explications.md  ex05_explications.md
docs/Python 2/: ex00_explications.md  ex01_explications.md  ex02_explications.md  ex03_explications.md
docs/Python 3/: ex00_explications.md  ex01_explications.md  ex02_explications.md  ex03_explications.md  ex04_explications.md
docs/Python 4/: ex00_explications.md  ex01_explications.md  ex02_explications.md  ex03_explications.md
piscine_python_0/ex00/: Hello.py
piscine_python_0/ex01/: format_ft_time.py
piscine_python_0/ex02/: find_ft_type.py
piscine_python_0/ex03/: NULL_not_found.py
piscine_python_0/ex04/: whatis.py
piscine_python_0/ex05/: building.py
piscine_python_0/ex06/: filterstring.py  ft_filter.py
piscine_python_0/ex07/: sos.py
piscine_python_0/ex08/: Loading.py
piscine_python_0/ex09/: README.md  pyproject.toml
piscine_python_0/ex09/ft_package/: __init__.py
piscine_python_1/ex00/: give_bmi.py
piscine_python_1/ex01/: array2D.py
piscine_python_1/ex03/: zoom.py
piscine_python_1/ex04/: rotate.py
piscine_python_1/ex05/: load_image.py  pimp_image.py
piscine_python_2/ex00/: load_csv.py
piscine_python_2/ex01/: aff_life.py
piscine_python_3/ex00/: S1E9.py
(+11 files in other folders)
