[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ft_package"
version = "0.0.1"
description = "A sample test package"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "eagle", email = "eagle@42.fr"}
]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/eagle/ft_package"
